--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             const message = document.querySelector("[name='message']").value;
     
             try {
-              const response = await fetch("http://127.0.0.1:5000/contact", {
+              const response = await fetch("https://stier.onrender.com/contact", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({ name, email, message }),
