--- a/view_message.html
+++ b/view_message.html
@@ -54,7 +54,7 @@
 
   <script>
     async function loadMessages() {
-      const res = await fetch("http://localhost:5000/messages");
+      const res = await fetch("https://stier.onrender.com/messages");
       const messages = await res.json();
 
       const tbody = document.querySelector("#messages-table tbody");
@@ -76,7 +76,7 @@
       const confirmed = confirm("Are you sure you want to clear all messages?");
       if (!confirmed) return;
 
-      const res = await fetch("http://localhost:5000/messages", {
+      const res = await fetch("https://stier.onrender.com/messages", {
         method: "DELETE"
       });
       const result = await res.json();
