--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <input type="text" name="name" placeholder="Name" required>
             <input type="email" name="email" placeholder="Email" required>
             <textarea name="message" placeholder="Message" required></textarea>
-            <button type="submit">Send</button>
+            <button type="submit">Message sent. Will get back shortly!</button>
           </form>
         <p id="response-message" style="color: green; margin-top: 10px;"></p>
     </section>
